syntax = "proto3";

package tenant;
import "google/protobuf/struct.proto";



service TenantService {
  rpc Create (CreateTenantRequest) returns (Tenant) {}
  rpc Retrieve (RetrieveTenantRequest) returns (Tenant) {}
  rpc Update(UpdateTenantRequest) returns (Tenant) {}
  rpc Delete (DeleteTenantRequest) returns (DeleteTenantReply) {}
  rpc FindByName (FindTenantByNameRequest) returns (Tenant) {}
  rpc List(ListTenantRequest) returns (ListTenantReply) {}
}

message DeleteTenantRequest {
  string id = 1;
}

message DeleteTenantReply {
  bool success = 1;
}

message FindTenantByNameRequest {
  string name = 1;
}

message RetrieveTenantRequest {
  string id = 1;
}

message CreateTenantRequest {
  string name = 1;
  string display_name = 2;
  string description = 3;
  string region = 4;
  string environment = 5;
  string jwt_configuration = 6;
}

message UpdateTenantRequest {
  string id = 1;
  optional string name = 2;
  optional string display_name = 3;
  optional string domain = 4;
  optional string description = 5;
  optional string region = 6;
  optional string environment = 7;
  optional string change_password = 8; // Record<string, any>;
  optional string device_flow = 9; // Record<string, any>;
  optional string guardian_mfa_page = 10; // Record<string, any>;
  optional string default_audience = 11;
  optional string default_connection = 12;
  optional string error_page = 13; // Record<string, any>;
  optional string flags = 14; // Record<string, boolean>;
  optional string picture = 15;
  optional string support_email = 16;
  optional string support_url = 17;
  repeated string allowed_logout_urls = 18;
  repeated int64 session_lifetime = 19;
  repeated int64 idle_session_lifetime = 20;
  optional string sandbox_version = 21;
  optional string default_redirection_uri = 22;
  repeated string enabled_locales = 23;
  optional string session_cookie = 24; // Record<string, any>;
  optional string jwt_configuration = 25; // JwtConfiguration;
  optional string config = 26; // Record<string, any>;
}

message Tenant {
  string id = 1;
  string name = 2;
  string display_name = 3;
  string description = 4;
  string region = 5;
  string environment = 6;
  string jwt_configuration = 7;
}

message NullableTenant {
  oneof kind {
    google.protobuf.NullValue null = 1;
    Tenant tenant = 2;
  }
}

message ListTenantRequest {
  string q = 1;
  int64 page = 2;
  int64 per_page = 3;
  string sort = 4;
  bool include_totals = 5;
  bool include_fields = 6;
}

message PageMeta {
  int64 page = 1;
  int64 per_page = 3;
  int64 total = 2;
}

message ListTenantReply {
  repeated Tenant items = 1;
  PageMeta meta = 2;
}